--- a/DX12/DX12Tutorial/DX12Tutorial/DX12Tutorial.vcxproj.filters
+++ b/DX12/DX12Tutorial/DX12Tutorial/DX12Tutorial.vcxproj.filters
@@ -32,5 +32,11 @@
     <ClInclude Include="DX12Wrapper.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="d3dx12.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="shader.hlsl" />
   </ItemGroup>
 </Project>
